Fixedoverlapping map issue on mobile
added full width background to map section

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
  3.6 Newsletter
  3.7 Contact
  3.8 Footer
-4 Responsive 
+4 Responsive
 **********************************************************************/
 
 /*
@@ -275,7 +275,7 @@ p {
     -ms-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
-.thumbnail h3, 
+.thumbnail h3,
 .thumbnail p {
     margin:0;
     padding:0;
@@ -335,7 +335,7 @@ p {
     color:#181A1C;
 }
 /*
-3. Sections 
+3. Sections
 ***************************************************************************/
  .section {
     padding-bottom: 50px;
@@ -403,7 +403,7 @@ p {
     padding:0;
 }
 /*******
-3.1 Services  
+3.1 Services
 ***************************************/
 .service{
     margin-top:20px;
@@ -593,7 +593,7 @@ p {
 .testimonial .whopic small {
     display:block;
     font-size:12px;
-    
+
 }
 .testimonial-text{
     display:block;
@@ -687,7 +687,7 @@ p {
 3.7 Contact
 ********************************************************************/
  .contact {
-    background: #33C4FF;
+    background:#181A1C;
 }
 .contact h1, .contact h2, .contact h3, .contact h4, .contact h5, .contact h6, .contact .section .title > p, .contact .social > li > a {
     color: #181A1C;
@@ -722,23 +722,27 @@ p {
     margin:10px auto;
     font-size:30px;
 }
-.map-wrapper {
-    position:relative;
-    height:500px;
-    background: #181A1C url(../images/map.jpg) no-repeat center;
+
+.mapcontainer{
+  width: 100vw
+  color:#black;
 }
-.map-canvas {
-    position:absolute;
-    background: #181A1C url(../images/brand-bg.png) no-repeat center;
-    margin-bottom:20px;
-    width:100%;
-    height:500px;
-    color: #29383F;
-    position:absolute;
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+
+.map-responsive iframe{
     left:0;
     top:0;
-    right:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+
 }
+
 .contact .social {
     display: inline-block;
     margin-left:0;
@@ -759,11 +763,9 @@ p {
 }
 .contact-form {
     background: #181a1c;
-    background: #181a1c;
     z-index:110;
     position:relative;
-    margin-top:-25px;
-    padding:20px;
+    padding-top:25px;
 }
 .contact-form h3 {
     color:#33c4ff;
@@ -907,7 +909,7 @@ p {
 .iframe-container{
   position: relative;
   width: 100%;
-  padding-bottom: 56.25%; 
+  padding-bottom: 56.25%;
   height: 0;
 }
 .iframe-container iframe{
